# fm-web

./: .gitignore  CLAUDE.md  Makefile  docker-compose.yml  pyproject.toml  sites.yaml.example
docs/: ARCHITECTURE.md  LESSONS-LEARNED.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/lib/: api.ts  hooks.ts  nav.ts
frontend/src/pages/: DiagnosticsPage.tsx  EntriesPage.tsx  EntryDetailPage.tsx  FieldDetailPage.tsx  FileDetailPage.tsx  FilesPage.tsx  PackagesPage.tsx  SignonPage.tsx
frontend/src/types/: api.ts  openapi.json
scripts/: record_fixtures.py  setup_vehu_user.py
src/fm_web/: settings.py
src/fm_web/api/: app.py  deps.py  routes_entries.py  routes_files.py  routes_packages.py  routes_session.py  sessions.py
src/fm_web/broker/: __init__.py  allowlist.py  client.py  crypt.py  errors.py  fake.py  responses.py  wire.py
src/fm_web/models/: __init__.py  entry.py  file_def.py  package.py  type_spec.py
src/fm_web/services/: __init__.py  data_dictionary.py  entries.py  packages.py
tests/: test_fm_web.py
tests/contract/: test_vehu_fixtures.py
tests/contract/fixtures/: ddr_find1__new_person_by_access.json  ddr_finder__patient_by_a_prefix.json  ddr_get_dd__patient_AL.json  ddr_get_dd_hash__patient.json  ddr_gets_entry_data__new_person_1_basic.json  (+8 more)
tests/unit/: test_allowlist.py  test_api_routes.py  test_client.py  test_crypt.py  test_data_dictionary_service.py  test_entry_service.py  test_errors.py  test_fake.py  test_package_service.py  test_responses.py  test_type_spec.py  test_wire.py
